# genie-external-demo-sp-v2

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  databricks_auth.py  dev_flags.py  flow_events.py  genie_client.py  lakebase.py  main.py  request_ctx.py  run.py  sp_mapping.py  sql_client.py  tracing.py  users.py
backend/agent/: __init__.py  graph.py  state.py  tokens.py
backend/static/: app.js  index.html  styles.css
scripts/: create_crm_genie_space.py  create_genie_space.py  debug_genie_result.py  seed_recent_dates.py  setup_crm_databricks.py  setup_databricks.py  setup_mlflow_tracing.py  teardown_databricks.py
